--- a/index.html
+++ b/index.html
@@ -101,9 +101,140 @@
       }
     }
   </style>
+  <script>
+    const sheetJsonUrl = 'https://opensheet.elk.sh/1sZGH3TGYdC5UShrIEFEe2T8-axXEFet6qsxbqCoHX5o/%E3%82%B7%E3%83%BC%E3%83%881';
+    let allVideos = [];
+
+    window.addEventListener('DOMContentLoaded', () => {
+      fetch(sheetJsonUrl)
+        .then(response => response.json())
+        .then(data => {
+          allVideos = data;
+          populateFilters(data);
+          applyFilters();
+        })
+        .catch(error => console.error('JSON読み込みエラー:', error));
+
+      const categoryFilter = document.getElementById('categoryFilter');
+      const dateFilter = document.getElementById('dateFilter');
+      const typeFilter = document.getElementById('typeFilter');
+      const roleFilter = document.getElementById('roleFilter');
+      const searchInput = document.getElementById('searchInput');
+      const sortOrder = document.getElementById('sortOrder');
+      const resetButton = document.getElementById('resetFilters');
+      const videoList = document.getElementById('videoList');
+
+      function populateFilters(videos) {
+        const sets = {
+          category: new Set(),
+          date: new Set(),
+          type: new Set(),
+          role: new Set()
+        };
+
+        videos.forEach(v => {
+          sets.category.add(v["カテゴリ"]);
+          sets.date.add(v["公開日"]);
+          sets.type.add(v["動画種別"]);
+          sets.role.add(v["担当区分"]);
+        });
+
+        addOptions(categoryFilter, [...sets.category].sort());
+        addOptions(dateFilter, [...sets.date].sort());
+        addOptions(typeFilter, [...sets.type].sort());
+        addOptions(roleFilter, [...sets.role].sort());
+
+        [categoryFilter, dateFilter, typeFilter, roleFilter, searchInput, sortOrder].forEach(el => {
+          el.addEventListener('change', applyFilters);
+          el.addEventListener('input', applyFilters);
+        });
+
+        resetButton.addEventListener('click', () => {
+          categoryFilter.value = "";
+          dateFilter.value = "";
+          typeFilter.value = "";
+          roleFilter.value = "";
+          searchInput.value = "";
+          sortOrder.value = "desc";
+          applyFilters();
+        });
+      }
+
+      function addOptions(select, values) {
+        values.forEach(v => {
+          if (!v) return;
+          const option = document.createElement('option');
+          option.value = v;
+          option.textContent = v;
+          select.appendChild(option);
+        });
+      }
+
+      function applyFilters() {
+        let filtered = allVideos.filter(video => {
+          return (!categoryFilter.value || video["カテゴリ"] === categoryFilter.value) &&
+                 (!dateFilter.value || video["公開日"] === dateFilter.value) &&
+                 (!typeFilter.value || video["動画種別"] === typeFilter.value) &&
+                 (!roleFilter.value || video["担当区分"] === roleFilter.value) &&
+                 (!searchInput.value ||
+                  video["title"].toLowerCase().includes(searchInput.value.toLowerCase()) ||
+                  video["artist"].toLowerCase().includes(searchInput.value.toLowerCase()));
+        });
+
+        filtered.sort((a, b) => {
+          const dateA = new Date(a["公開日"]);
+          const dateB = new Date(b["公開日"]);
+          return sortOrder.value === "asc" ? dateA - dateB : dateB - dateA;
+        });
+
+        renderVideoList(filtered);
+      }
+
+      function renderVideoList(videos) {
+        videoList.innerHTML = '';
+        videos.forEach(video => {
+          const li = document.createElement('li');
+          const link = document.createElement('a');
+          link.href = "#";
+          link.textContent = `${video["title"]} - ${video["artist"]}`;
+          link.onclick = e => {
+            e.preventDefault();
+            loadVideo(video);
+          };
+          const info = document.createElement('div');
+          info.className = 'video-info';
+          info.textContent = `カテゴリ: ${video["カテゴリ"]} ／ 公開日: ${video["公開日"]} ／ 動画種別: ${video["動画種別"]} ／ 担当区分: ${video["担当区分"]}`;
+          li.appendChild(link);
+          li.appendChild(info);
+          videoList.appendChild(li);
+        });
+      }
+
+      function loadVideo(video) {
+        const start = parseInt(video["start"] || '0');
+        let videoId = video["videoId"];
+        const platform = video["platform"];
+        let embedUrl = "";
+
+        if (!videoId) return alert("videoId が指定されていません");
+
+        if (platform.toLowerCase().includes("youtube")) {
+          const match = videoId.match(/(?:v=|\/|youtu\.be\/)?([0-9A-Za-z_-]{11})/);
+          if (match) videoId = match[1];
+          embedUrl = `https://www.youtube.com/embed/${videoId}?start=${start}&autoplay=1`;
+        } else if (platform.toLowerCase() === "tiktok") {
+          const match = videoId.match(/video\/(\d+)/);
+          const tiktokId = match ? match[1] : videoId;
+          embedUrl = `https://www.tiktok.com/embed/v2/${tiktokId}`;
+        }
+
+        document.getElementById('videoPlayer').innerHTML = `<iframe src="${embedUrl}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
+      }
+    });
+  </script>
 </head>
 <body>
-  <h1>Vtuber 歌ってみたリスト</h1>
+  <h1>にじさんじ所属 司賀りこ 歌まとめ</h1>
   <div id="filters">
     <select id="categoryFilter"><option value="">カテゴリで絞り込み</option></select>
     <select id="dateFilter"><option value="">公開日で絞り込み</option></select>
@@ -116,11 +247,7 @@
     </select>
     <button id="resetFilters">リセット</button>
   </div>
-  <ul id="videoList">
-    <!-- 動画リストがここに入る -->
-  </ul>
-  <div id="videoPlayer">
-    <!-- プレーヤー埋め込みエリア -->
-  </div>
+  <ul id="videoList"></ul>
+  <div id="videoPlayer"></div>
 </body>
 </html>
